--- a/novice/02-03/kasus/underscore/index.html
+++ b/novice/02-03/kasus/underscore/index.html
@@ -14,6 +14,9 @@
     <script src="./underscore-min.js"></script>
     <script type="text/javascript">
     	_.each([1,2,3], alert)
+
+    	let a = _.shuffle([1, 2, 3, 4, 5, 6]);
+    	console.log(a)
     </script>
 </body>
 
